# pdebenchmark

./: .gitignore  Makefile  README.md  config_flags  configure.sh  pyproject.toml
pdebenchmark/: derivatives.py  driver.py  grids.py  initial_conditions.py  io.py  ode_solving.py  pdes.py
